tests/negative/regression/r17.orng
// r17.orng:5:28: error: error: expected a compile-time constant type, got negate
// fn main() -> Int { let x: -2 = 43 } 
//                           ^
// 
fn main() -> Int { let x: -2 = 43 } 